--- a/damap-backend/src/main/resources/application.yaml
+++ b/damap-backend/src/main/resources/application.yaml
@@ -2,13 +2,13 @@
 # replace these in the config of your custom project or by overriding these variables
 damap:
   env: DEV # override in your custom project with PROD for production deployment
-  origins: http://localhost:8085 # https://your.frontend.com,https://*.yourdomain.com
+  origins: http://damap.it.tuwien.ac.at # https://your.frontend.com,https://*.yourdomain.com
   auth:
     backend:
       url: http://keycloak:8080/auth/realms/damap # https://your.authentication.server
       client: 'damap-be' # your-backend-authentication-client-id
     frontend:
-      url: http://localhost:8087/auth/realms/damap # usually the same as the backend url
+      url: http://damap.it.tuwien.ac.at:8087/auth/realms/damap # usually the same as the backend url
       client: 'damap' # your-frontend-authentication-client-id
     scope: 'openid profile email offline_access microprofile-jwt roles personID' # your-backend-authentication-scope, including your variable for your user IDs
     user: 'personID' # the variable name for your user IDs
