Update realm files & .env-sample

--- a/damap-backend/.env-sample
+++ b/damap-backend/.env-sample
@@ -7,4 +7,4 @@ POSTGRES_MULTIPLE_DATABASES="db1,db2" # to be used from multiple containers
 # KEYCLOAK
 KEYCLOAK_USER="keycloak_user"
 KEYCLOAK_PASSWORD="u_will_never_guess"
-KEYCLOAK_REALM_EXPORT="realm-export-production.json" # the filename to import the realms from
+KEYCLOAK_REALM_EXPORT="master-realm-production.json,custom-realm-production.json" # the filename(s) to import the realms from
