Update .env sample

--- a/damap-backend/.env-sample
+++ b/damap-backend/.env-sample
@@ -5,6 +5,11 @@ POSTGRES_PASSWORD="super_secure_password"
 POSTGRES_MULTIPLE_DATABASES="db1,db2" # to be used from multiple containers
 
 # KEYCLOAK
+KEYCLOAK_DB="keycloak"
+KEYCLOAK_DB_USER="keycloak"
+KEYCLOAK_DB_PASSWORD="keycloak"
+# credentials for master realm
 KEYCLOAK_USER="keycloak_user"
 KEYCLOAK_PASSWORD="u_will_never_guess"
-KEYCLOAK_REALM_EXPORT="master-realm-production.json,custom-realm-production.json" # the filename(s) to import the realms from
+# comma separated path(s) of filename(s) to import the custom realm(s) from
+KEYCLOAK_IMPORT="/tmp/import/realm1.json,/tmp/import/realm2.json"
