--- a/.env-sample
+++ b/.env-sample
@@ -1,3 +1,7 @@
+# NGINX
+HTTP_AUTH_USER="nginx_admin"
+HTTP_AUTH_PASSWORD="very_secret_password"
+
 # POSTGRES
 POSTGRES_DB="psql_db"
 POSTGRES_USER="psql_user"
@@ -13,3 +17,6 @@ KEYCLOAK_USER="keycloak_user"
 KEYCLOAK_PASSWORD="u_will_never_guess"
 # comma separated path(s) of filename(s) to import the custom realm(s) from
 KEYCLOAK_IMPORT="/tmp/import/realm1.json,/tmp/import/realm2.json"
+
+# GENERAL
+TZ="Europe/Vienna"
