--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,6 +1,8 @@
 FROM nginx:1
 
-COPY docker-entrypoint.d /docker-entrypoint.d/
-COPY nginx.conf /etc/nginx/nginx.conf
+COPY nginx/docker-entrypoint.d /docker-entrypoint.d/
+COPY nginx/nginx.conf /etc/nginx/nginx.conf
+COPY nginx/templates /etc/nginx/templates/
+COPY ssl /etc/nginx/ssl
 
 RUN chmod -R a+x docker-entrypoint.d
