--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,33 +1,27 @@
 worker_processes  auto;
+
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
+
 events {
     worker_connections  1024;
 }
+
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
+
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
-    access_log  /var/log/nginx/access.log main;
-    sendfile        on;
-    keepalive_timeout  65;
-    server {
-        location / {
-            proxy_pass http://damap-fe:8080;
-        }
-        location /api/ {
-            proxy_pass http://damap-be:8080;
-        }
 
-        location /stats {
-            # Serve goaccess html file
-            root /srv/report;
-            try_files /report.html =404;
-            # Secure route
-            auth_basic "Restricted Content";
-            auth_basic_user_file /etc/nginx/.htpasswd;
-        }
-    }
+    access_log  /var/log/nginx/access.log main;
+
+    sendfile        on;
+    tcp_nopush      on;
+    tcp_nodelay     on;
+
+    keepalive_timeout  65;
+
+    include /etc/nginx/conf.d/*.conf;
 }
