--- a/damap-backend/src/main/resources/application.yaml
+++ b/damap-backend/src/main/resources/application.yaml
@@ -16,11 +16,19 @@ damap:
     url: jdbc:postgresql://damap-db:5432/damap # jdbc:your-datasource-language:your-datasource.address
     username: damap # your-datasource-username
     password: damap # your-datasource-password
+    db-kind: postgresql # your database
   repositories:
     recommendation: [ your-recommened-repositories ]
   projects-url: http://api-mock:80
   persons-url: http://api-mock:80
   fits-url: http://your.fits.service:1234
+  person-services:
+    - display-text: 'University'
+      query-value: 'UNIVERSITY'
+      class-name: 'at.ac.tuwien.damap.rest.persons.MockUniversityPersonServiceImpl'
+    - display-text: 'ORCID'
+      query-value: 'ORCID'
+      class-name: 'at.ac.tuwien.damap.rest.persons.orcid.ORCIDPersonServiceImpl'
 
 # general config settings
 quarkus:
@@ -40,7 +48,7 @@ quarkus:
   datasource:
     jdbc:
       url: ${damap.datasource.url}
-    db-kind: postgresql
+    db-kind: ${damap.datasource.db-kind}
     username: ${damap.datasource.username}
     password: ${damap.datasource.password}
 
@@ -68,6 +76,8 @@ rest:
     repositories/mp-rest/url: https://www.re3data.org/api
     repositories/mp-rest/scope: javax.inject.Singleton
   openaire/mp-rest/url: http://api.openaire.eu/search/
+  orcid:
+    search/mp-rest/url: https://pub.orcid.org
 
 "%dev":
   damap:
