--- a/docker/damap-fe/Dockerfile
+++ b/docker/damap-fe/Dockerfile
@@ -14,7 +14,7 @@ COPY ./layout_components/* /app/apps/damap-frontend/src/app/components/layout/
 ENV PATH="$PATH:/app/node_modules/@angular/cli/bin/"
 
 # install and build the application on the builder container
-RUN npm install -g nx && \
+RUN npm install -g "nx@<16.7.0" && \
     npm install
 RUN npx nx build damap-frontend
 
