Global: Add certbot to the services
* Checks auto-renewal for the SSL certificate (once initialized) every 12h
* Nginx auto reloads to pick up any potential changes every 6h in the background

--- a/.env-sample
+++ b/.env-sample
@@ -1,4 +1,8 @@
 # NGINX
+NGINX_HOSTNAME="your_hostname.com"
+# for a live domain:
+SSL_CERTIFICATE_PATH="/etc/letsencrypt/conf/live/<your_domain>/fullchain.pem"
+SSL_KEY_PATH="/etc/letsencrypt/conf/live/<your_domain>/privkey.pem"
 HTTP_AUTH_USER="nginx_admin"
 HTTP_AUTH_PASSWORD="very_secret_password"
 
