--- a/docker/nginx/templates/default.conf.template
+++ b/docker/nginx/templates/default.conf.template
@@ -2,11 +2,14 @@
 server {
     listen 80;
     listen [::]:80; # IPv6
-    server_name _;
+    server_name ${NGINX_HOSTNAME};
 
     # redirect everything to https
     location / {
         return 301 https://$host$request_uri;
+    }
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
     }
 }
 
@@ -14,20 +17,23 @@ server {
 server {
     listen 443 ssl;
     listen [::]:443 ssl; # IPv6
-    server_name _;
+    server_name ${NGINX_HOSTNAME};
 
-    ssl_certificate /etc/nginx/ssl/${SSL_CERTIFICATE};
-    ssl_certificate_key /etc/nginx/ssl/${SSL_KEY};
+    ssl_certificate ${SSL_CERTIFICATE_PATH};
+    ssl_certificate_key ${SSL_KEY_PATH};
 
-    # Proxying to the application server
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    # Proxy to the application server
     location / {
         proxy_pass http://damap-fe:8080;
     }
-    # Proxying to the API
+    # Proxy to the API
     location /api/ {
         proxy_pass http://damap-be:8080;
     }
-    # Proxying to the server statistics
+    # Proxy to the server statistics
     location /stats {
         # Serve goaccess html file
         root /srv/report;
