--- a/docker/nginx/templates/default.conf.template
+++ b/docker/nginx/templates/default.conf.template
@@ -48,7 +48,7 @@ server {
 server {
     listen 80;
     listen [::]:80; # IPv6
-    server_name test.${NGINX_HOSTNAME};
+    server_name test-${NGINX_HOSTNAME};
 
     # Redirect to HTTPS
     location / {
@@ -60,10 +60,10 @@ server {
 server {
     listen 443 ssl;
     listen [::]:443 ssl; # IPv6
-    server_name test.${NGINX_HOSTNAME};
+    server_name test-${NGINX_HOSTNAME};
 
-    ssl_certificate ${SSL_CERTIFICATE_PATH};
-    ssl_certificate_key ${SSL_KEY_PATH};
+    ssl_certificate ${SSL_TEST_CERTIFICATE_PATH};
+    ssl_certificate_key ${SSL_TEST_KEY_PATH};
 
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
