--- a/docker/damap-be/application.yml
+++ b/docker/damap-be/application.yml
@@ -6,29 +6,30 @@ damap:
   auth:
     backend:
       url: http://keycloak:8080/auth/realms/damap # https://your.authentication.server
-      client: 'damap-be' # your-backend-authentication-client-id
+      client: "damap-be" # your-backend-authentication-client-id
     frontend:
-      url: https://${DAMAP_BE_HOSTNAME}:8087/auth/realms/damap # usually the same as the backend url
-      client: 'damap' # your-frontend-authentication-client-id
-    scope: 'openid profile email offline_access microprofile-jwt roles personID' # your-backend-authentication-scope, including your variable for your user IDs
-    user: 'personID' # the variable name for your user IDs
+      url: https://${DAMAP_BE_HOSTNAME}/auth/realms/damap
+      client: "damap" # your-frontend-authentication-client-id
+    scope: "openid profile email offline_access microprofile-jwt roles personID" # your-backend-authentication-scope, including your variable for your user IDs
+    user: "personID" # the variable name for your user IDs
   datasource:
     url: jdbc:postgresql://postgres:5432/damap # jdbc:your-datasource-language:your-datasource.address
     username: damap # your-datasource-username
     password: damap # your-datasource-password
     db-kind: postgresql # your database
   repositories:
-    recommendation: [ your-recommened-repositories ]
+      # Zenodo, Open Science Framework, DRYAD, Mendeley Data
+    recommendation: ['r3d100010468', 'r3d100011137', 'r3d100000044', 'r3d100011868']
   projects-url: http://api-mock:80
   persons-url: http://api-mock:80
   fits-url: http://fits-service:8080/fits
   person-services:
-    - display-text: 'University'
-      query-value: 'UNIVERSITY'
-      class-name: 'at.ac.tuwien.damap.rest.persons.MockUniversityPersonServiceImpl'
-    - display-text: 'ORCID'
-      query-value: 'ORCID'
-      class-name: 'at.ac.tuwien.damap.rest.persons.orcid.ORCIDPersonServiceImpl'
+    - display-text: "University"
+      query-value: "UNIVERSITY"
+      class-name: "at.ac.tuwien.damap.rest.persons.MockUniversityPersonServiceImpl"
+    - display-text: "ORCID"
+      query-value: "ORCID"
+      class-name: "at.ac.tuwien.damap.rest.persons.orcid.ORCIDPersonServiceImpl"
 
 invenio:
   shared-secret: "secret stuff or token"
@@ -41,6 +42,9 @@ quarkus:
       origins: ${damap.origins}
       headers: origin,content-type,accept,authorization
       access-control-max-age: 1
+    # needed for the fits service. Specify how large a single file for upload may be.
+    limits:
+      max-body-size: 10M
 
   oidc:
     auth-server-url: ${damap.auth.backend.url}
@@ -69,7 +73,7 @@ quarkus:
 
   liquibase:
     migrate-at-start: true
-    change-log: db/changeLog.yaml
+    change-log: at/ac/tuwien/damap/db/changeLog-root.yaml
 
 rest:
   projects/mp-rest/url: ${damap.projects-url}
@@ -107,7 +111,7 @@ rest:
 "%test":
   damap:
     repositories:
-      recommendation: ['r3d100013557'] # Re3Data id(s)
+      recommendation: ['r3d100010468'] # Re3Data id(s)
   quarkus:
     datasource:
       db-kind: h2
