--- a/docker/nginx/templates/default.conf.template
+++ b/docker/nginx/templates/default.conf.template
@@ -33,6 +33,15 @@ server {
     location /api/ {
         proxy_pass http://damap-backend:8080;
     }
+    # Proxy to keycloak
+    location /auth {
+        rewrite /auth/(.*) /auth/$1 break;
+        proxy_pass http://keycloak:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
     # Proxy to the server statistics
     location /stats {
         # Serve goaccess html file
@@ -70,10 +79,10 @@ server {
 
     # Proxy to the test application server
     location / {
-        proxy_pass http://damap-fe-next:8080;
+        proxy_pass http://damap-frontend-next:8080;
     }
     # Proxy to the API
     location /api/ {
-        proxy_pass http://damap-be-next:8080;
+        proxy_pass http://damap-backend-next:8080;
     }
 }
