--- a/example.env
+++ b/example.env
@@ -20,6 +20,11 @@ DAMAP_BE_VERSION="3.0.0"
 
 DAMAP_FE_VERSION="3.0.0"
 
+DAMAP_BE_ALT_ENV="PROD"
+DAMAP_BE_ALT_VERSION="3.0.0"
+
+DAMAP_FE_ALT_VERSION="3.0.0"
+
 # ======================================================================================
 #                                     POSTGRES
 # ======================================================================================
