--- a/docker/nginx/templates/default.conf.template
+++ b/docker/nginx/templates/default.conf.template
@@ -1,4 +1,4 @@
-# HTTP server for the 'master' branch instance
+# HTTP server for the 'next' branch instance
 server {
     listen 80;
     listen [::]:80; # IPv6
@@ -13,7 +13,7 @@ server {
     }
 }
 
-# HTTPS server for the 'master' branch instance
+# HTTPS server for the 'next' branch instance
 server {
     listen 443 ssl;
     listen [::]:443 ssl; # IPv6
@@ -53,7 +53,7 @@ server {
     }
 }
 
-# HTTP server for the 'next' branch instance (Redirect to HTTPS)
+# HTTP server for the alternate deployment instance (Redirect to HTTPS)
 server {
     listen 80;
     listen [::]:80; # IPv6
@@ -65,7 +65,7 @@ server {
     }
 }
 
-# HTTPS server for the 'next' branch instance
+# HTTPS server for the alternate deployment instance
 server {
     listen 443 ssl;
     listen [::]:443 ssl; # IPv6
@@ -79,10 +79,10 @@ server {
 
     # Proxy to the test application server
     location / {
-        proxy_pass http://damap-frontend-next:8080;
+        proxy_pass http://damap-frontend-alt:8080;
     }
     # Proxy to the API
     location /api/ {
-        proxy_pass http://damap-backend-next:8080;
+        proxy_pass http://damap-backend-alt:8080;
     }
 }
