--- a/example.env
+++ b/example.env
@@ -14,15 +14,29 @@ HTTP_AUTH_PASSWORD="very_secret_password"
 # ======================================================================================
 #                                      DAMAP
 # ======================================================================================
+#                                  DAMAP backend
+# --------------------------------------------------------------------------------------
+DAMAP_BE_DB_NAME="damap"
+DAMAP_BE_DB_PASSWORD="damap"
+DAMAP_BE_DB_USER="damap"
 DAMAP_BE_ENV="PROD"
 DAMAP_BE_HOSTNAME="your_hostname.com"
 DAMAP_BE_VERSION="3.0.0"
 
+#                                  DAMAP frontend
+# --------------------------------------------------------------------------------------
 DAMAP_FE_VERSION="3.0.0"
 
+#                              DAMAP backend alternate
+# --------------------------------------------------------------------------------------
+DAMAP_BE_ALT_DB_NAME="damap_alt"
+DAMAP_BE_ALT_DB_PASSWORD="damap_alt"
+DAMAP_BE_ALT_DB_USER="damap_alt"
 DAMAP_BE_ALT_ENV="PROD"
 DAMAP_BE_ALT_VERSION="3.0.0"
 
+#                              DAMAP frontend alternate
+# --------------------------------------------------------------------------------------
 DAMAP_FE_ALT_VERSION="3.0.0"
 
 # ======================================================================================
@@ -31,7 +45,7 @@ DAMAP_FE_ALT_VERSION="3.0.0"
 POSTGRES_DB="psql_db"
 POSTGRES_USER="psql_user"
 POSTGRES_PASSWORD="super_secure_password"
-POSTGRES_MULTIPLE_DATABASES="db1,db2" # to be used from multiple containers
+POSTGRES_EXTRA_DBS="psql_db,damap,damap_alt" # to be used from multiple containers
 
 # ======================================================================================
 #                                     KEYCLOAK
