--- a/docker/postgres/Dockerfile
+++ b/docker/postgres/Dockerfile
@@ -1,4 +1,6 @@
-FROM postgres:12
+ARG POSTGRES_VERSION
+
+FROM postgres:${POSTGRES_VERSION}
 
 COPY docker-entrypoint-initdb.d /docker-entrypoint-initdb.d
 COPY healthcheck.sh /usr/local/bin/healthcheck.sh
