--- a/example.env
+++ b/example.env
@@ -46,6 +46,7 @@ POSTGRES_DB="psql_db"
 POSTGRES_USER="psql_user"
 POSTGRES_PASSWORD="super_secure_password"
 POSTGRES_EXTRA_DBS="psql_db,damap,damap_alt" # to be used from multiple containers
+POSTGRES_VERSION="16"
 
 # ======================================================================================
 #                                     KEYCLOAK
