🔧 Services: add gotenberg to the stack

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -170,6 +170,11 @@ services:
     ports:
       - "8089:8080"
 
+  gotenberg:
+    image: gotenberg/gotenberg:8
+    ports:
+      - "3000:3000"
+
   certbot:
     image: certbot/certbot
     container_name: "certbot"
