📜 Damap-BE: Update application.yml
* Chase upstream changes: add 'ethical-report-enabled' item

--- a/docker/damap-be/application.yml
+++ b/docker/damap-be/application.yml
@@ -32,6 +32,8 @@ damap:
     - display-text: "ORCID"
       query-value: "ORCID"
       class-name: "org.damap.base.rest.persons.orcid.ORCIDPersonServiceImpl"
+  fields:
+    ethical-report-enabled: true
 
 invenio:
   shared-secret: "secret stuff or token"
